crates/cairo-lang-parser/src/parser_test_data/diagnostics/fn
//! > Test missing param identifier

//! > test_runner_name
get_diagnostics

//! > cairo_code
#[extern]
#[abc]
fn missing_id<T> (ref: Ref::<T>) { }

//! > expected_diagnostics
error[E1013]: 'extern' is a reserved identifier.
 --> dummy_file.cairo:1:3
#[extern]
  ^^^^^^

error[E1001]: Missing token TerminalIdentifier.
 --> dummy_file.cairo:3:22
fn missing_id<T> (ref: Ref::<T>) { }
                     ^
